--- a/aspnet-EFBestPractices/aspnet-EFBestPractices.csproj
+++ b/aspnet-EFBestPractices/aspnet-EFBestPractices.csproj
@@ -5,6 +5,10 @@
     <RootNamespace>aspnet_EFBestPractices</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EFDataAccessLibrary\EFDataAccessLibrary.csproj" />
+  </ItemGroup>
+
 
 
 </Project>
