--- a/aspnet-EFBestPractices/appsettings.json
+++ b/aspnet-EFBestPractices/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Data Source=W09479\\POLYPLUS;Initial Catalog=EfBestPractDb;User ID=sa;Password=********;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;"
+  } 
 }
