--- a/aspnet-EFBestPractices/appsettings.json
+++ b/aspnet-EFBestPractices/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=W09479\\POLYPLUS;Initial Catalog=EfBestPractDb;User ID=sa;Password=********;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;"
+    "Default": "Data Source=W09479\\POLYPLUS;Initial Catalog=EfBestPractDb;User ID=sa;Password=pp+.75LN;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;"
   } 
 }
